--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RQM Handbook</title>
+    <title>AAAS Community Guides</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="Christie Bahlai + MSL Team"/>
+    <meta name="author" content="Aurelia Moser + MSL Team"/>
     <!-- STYLES -->
     <link href='https://fonts.googleapis.com/css?family=Fira+Sans:400,400italic,500,500italic,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -23,10 +23,9 @@
   			<img src="assets/images/science-fox_violeta.svg">
   		</div>
   		<nav>
-  		  <a class="selected" href="#schedule">Schedule</a>
+  		  <a class="selected" href="#outline">Outline</a>
         <a href="#modules">Modules</a>
-  		  <a href="#challenges">Challenges</a>
-  		  <a href="#help">Help</a>
+  		  <a href="#resources">Resources</a>
   		</nav>
   	</aside>
   <!-- BODY TEXT -->
@@ -37,14 +36,14 @@
         </a>
       </div>
 	<!-- TITLE -->
-      <h1>Reproducible Quantitative Methods (RQM)</h1>
-      <h2>Instructor Guide</h2>
+      <h1>AAAS Community Engagement Week</h1>
+      <h2>Community Guidelines</h2>
 
   <!-- META INFO -->
       <div class="meta-information">
       
         <p class="summary">
-          The handbook provides some guidance for professors teaching a 14-week class on open science, presuming an understanding of as an understanding of open frameworks for publication, some intermediate R or (other command-line based data analysis software) skills, and basic GitHub operations and use.
+          The short handbook provides some guidance for fellows and community managers working to develop inclusive, supportive, and mission-driven communities. It outlines a series of activities to guide the collaborative creation of community guidelines.
         </p>
 
       </div>
@@ -52,87 +51,25 @@
       <div class="image">
         <img src="assets/images/octopode-bar.jpg" alt="yeah bar" height="90" width="770"> 
       </div>
-	<!-- SCHEDULE -->
-		<h2 id="schedule">Course Schedule</h2>
-<!-- QUARTER 1 -->
+	<!-- PLAN FOR WORKSHOP -->
+		<h2 id="outline">Workshop Outline</h2>
     <section class="example">
       <section class="title">
-        <h1>Quarter 1</h1>
-        <p>Weeks 1-4</p>
-        <p>Some description of the learning objectives for quarter 1.</p>
+        <h1>Inclusive Community</h1>
+        <p>Focusing on barriers and techniques for integrating diverse populations, developing community guidelines and goals.</p>
       </section>
       <section class="content">
         <p>
-          <strong>Week 1</strong> - Title/Description
+          <strong>Part 1</strong> - Team Dynamics Exercise
         </p>
         <p>
-          <strong>Week 2</strong> - Title/Description
+          <strong>Part 2</strong> - Conduct Codes + Norms
         </p>
         <p>
-          <strong>Week 3</strong> - Title/Description
+          <strong>Part 3</strong> - Guidelines + Goals
         </p>
         <p>
-          <strong>Week 4</strong> - Title/Description
-        </p>
-      </section>
-    </section>
-<!-- QUARTER 2 -->
-    <section class="example">
-      <section class="title">
-        <h1>Quarter 2</h1>
-        <p>Weeks 5-8</p>
-        <p>Some description of the learning objectives for quarter 1.</p>
-      </section>
-      <section class="content">
-        <p>
-          <strong>Week 5</strong> - Title/Description
-        </p>
-        <p>
-          <strong>Week 6</strong> - Title/Description
-        </p>
-        <p>
-          <strong>Week 7</strong> - Title/Description
-        </p>
-        <p>
-          <strong>Week 8</strong> - Title/Description
-        </p>
-      </section>
-    </section>
-<!-- QUARTER 3 -->
-    <section class="example">
-      <section class="title">
-        <h1>Quarter 3</h1>
-        <p>Weeks 9-12</p>
-        <p>Some description of the learning objectives for quarter 1.</p>
-      </section>
-      <section class="content">
-        <p>
-          <strong>Week 9</strong> - Title/Description
-        </p>
-        <p>
-          <strong>Week 10</strong> - Title/Description
-        </p>
-        <p>
-          <strong>Week 11</strong> - Title/Description
-        </p>
-        <p>
-          <strong>Week 12</strong> - Title/Description
-        </p>
-      </section>
-    </section>
-<!-- QUARTER 4 -->
-    <section class="example">
-      <section class="title">
-        <h1>Quarter 2</h1>
-        <p>Weeks 13-14</p>
-        <p>Some description of the learning objectives for quarter 1.</p>
-      </section>
-      <section class="content">
-        <p>
-          <strong>Week 13</strong> - Title/Description
-        </p>
-        <p>
-          <strong>Week 14</strong> - Title/Description
+          <strong>Part 4</strong> - Discussion + Share-out
         </p>
       </section>
     </section>
@@ -140,44 +77,17 @@
   <!-- MODULES -->
   	<h2 id="modules">Modules</h2>
     <p>
-      Guides for each week of the course according to the above schedule
+      Guides for each exercise of this handbook according to the above outline.
     </p>
       <ol>
-        <li><strong><a href="week1/" target="_blank">Syllabus and Open Science Intro</a></strong></li>
-        <li><strong><a href="week2/" target="_blank">OS Intro</a></strong></li>
-        <li><strong><a href="week3/" target="_blank">OS Intro</a></strong></li>
-        <li><strong><a href="week4/" target="_blank">OS Intro</a></strong></li>
-        <li><strong><a href="week5/" target="_blank">OS Intermediate</a></strong> </li>
-        <li><strong><a href="week6/" target="_blank">OS Intermediate</a></strong></li>
-        <li><strong><a href="week7/" target="_blank">OS Intermediate</a></strong></li>
-        <li><strong><a href="week8/" target="_blank">OS Intermediate</a></strong></li>
-        <li><strong><a href="week9/" target="_blank">OS Advanced</a></strong></li>
-        <li><strong><a href="week10/" target="_blank">OS Advanced</a></strong></li>
-        <li><strong><a href="week11/" target="_blank">OS Advanced</a></strong></li>
-        <li><strong><a href="week12/" target="_blank">OS Advanced</a></strong></li>
-        <li><strong><a href="week13/" target="_blank">OS Pro and Polish</a></strong></li>
-        <li><strong><a href="week14/" target="_blank">OS Pro and Polish</a></strong></li>
+        <li><strong><a href="week1/" target="_blank">Team Dynamics Exercise</a></strong></li>
+        <li><strong><a href="week2/" target="_blank">Conduct Codes + Norms</a></strong></li>
+        <li><strong><a href="week3/" target="_blank">Guidelines + Goal-Setting</a></strong></li>
+        <li><strong><a href="week3/" target="_blank">Discussion + Share-out</a></strong></li>
       </ol>
 
-      <iframe width="100%" height="425" src="https://www.youtube.com/embed/N2zK3sAtr-4" frameborder="0" allowfullscreen></iframe>
-  	
-  <!-- CHALLENGES -->
-  	<h2 id="challenges">Challenges</h2>
-
-  	<section class="track-details">
-      <section>
-        <h4>Week 1</h4>
-        <p>
-          Some stuff or details.
-          <a href="https://2016.spaceappschallenge.org/challenges/aero"> LINK</a>
-        </p>
-
-      </section>
-  	  
-  	</section>
-
   <!-- HELP -->
-  	<h2 id="help">Help</h2>
+  	<h2 id="resources">Resources</h2>
   		<ol class="steps">
         <!-- faq -->
         <li>
@@ -188,14 +98,13 @@
 
           <ul>
             <li>
-              <h2>QUESTION</h2>
+              <h2>Can I reuse these resources?</h2>
               <p>
-                ANSWER
+                Yes, most definitely. You can fork this repository and website <a href="https://github.com/auremoser/aaas-guides">here</a>. All materials are under a Mozilla Public License and you are authorized to reuse as you see fit.
               </p>
-              <h2>QUESTION</h2>
+              <h2>Who should I contact for further queries?</h2>
                 <ul>
-                  <li>LIST ANSWER</li>
-                  <li>LIST ANSWER</li>
+                  <li>Aurelia Moser - <a href="mailto:aurelia@mozillafoundation.org">aurelia@mozillafoundation.org</a></li>
                 </ul>
             </li>
           </ul>
@@ -208,16 +117,12 @@
           </p>
           <ul>
             <li>
-              <h2>RESOURCE</h2>
-              <p><a href="">LINK</a></p>
+              <h2>Resource repository</h2>
+              <p><a href="https://github.com/auremoser/aaas-guides">https://github.com/auremoser/aaas-guides</a></p>
             </li>
             <li>
-              <h2>RESOURCE 2</h2>
-              <p><a href="">LINK</a></p>
-            </li>
-            <li>
-              <h2>RESOURCE 3</h2>
-              <p><a href="">LINK</a></p>
+              <h2>Workshop website</h2>
+              <p><a href="https://auremoser.github.io/aaas-guides">https://auremoser.github.io/aaas-guides</a></p>
             </li>
           </ul>
       </ol>
