added code of conduct materials and handout

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </p>
       <ol>
         <li><strong><a href="week1/" target="_blank">Team Dynamics Exercise</a></strong></li>
-        <li><strong><a href="week2/" target="_blank">Conduct Codes + Norms</a></strong></li>
+        <li><strong><a href="conduct/index.html" target="_blank">Conduct Codes + Norms</a></strong></li>
         <li><strong><a href="week3/" target="_blank">Guidelines + Goal-Setting</a></strong></li>
         <li><strong><a href="week3/" target="_blank">Discussion + Share-out</a></strong></li>
       </ol>
