--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   		</div>
   		<nav>
   		  <a class="selected" href="#outline">Outline</a>
-        <a href="#modules">Modules</a>
+        <a href="#handouts">Handouts</a>
   		  <a href="#resources">Resources</a>
   		</nav>
   	</aside>
@@ -74,8 +74,8 @@
       </section>
     </section>
 
-  <!-- MODULES -->
-  	<h2 id="modules">Modules</h2>
+  <!-- HANDOUTS -->
+  	<h2 id="handouts">Handouts</h2>
     <p>
       Guides for each exercise of this handbook according to the above outline.
     </p>
