--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
       </section>
       <section class="content">
         <p>
-          <strong>Part 1</strong> - Team Dynamics Exercise
+          <strong>Part 1</strong> - Team Dynamics Exercise - 10 minutes
         </p>
         <p>
-          <strong>Part 2</strong> - Conduct Codes + Norms
+          <strong>Part 2</strong> - Conduct Codes + Norms - 30 minutes
         </p>
         <p>
-          <strong>Part 3</strong> - Guidelines + Goals
+          <strong>Part 3</strong> - Guidelines + Goals - 15 minutes
         </p>
         <p>
-          <strong>Part 4</strong> - Discussion + Share-out
+          <strong>Part 4</strong> - Discussion + Share-out - 5 min
         </p>
       </section>
     </section>
