update conduct and goals handouts

--- a/conduct/index.html
+++ b/conduct/index.html
@@ -91,7 +91,7 @@
 
       <p>
         We find the best codes of conduct emerge from real discussion with the community it's aiming to serve, and when it's reflective of the issues they're
-        facing. We encourage you to work with other members of your, if possible.
+        facing. We encourage you to work with other members of your community, if possible.
         This can be done in person or through circulating an editable document
         that others can participate in virtually.
       </p>
@@ -104,7 +104,7 @@
           <p>
             Whether in person in a group or online, start by reflecting on the
             following questions. Take notes about the answers. Try to give yourself
-            5-7 minutes per question.
+            2-3 minutes per question.
           </p>
 
           <p>
