--- a/goals/index.html
+++ b/goals/index.html
@@ -113,7 +113,7 @@
                 Adapt the desirable and undesirable behaviors from the previous exercise to list some norms you'd like to enforce. Document one or two main ones on post-its. 
               </p>
               <p>
-                <em>Think about how you might enforce these behaviors.</em>
+                <em>Examples: Think about how you might enforce these behaviors.</em>
                 <em>How can you communicate them simply, and revisit them often?</em>
                 <em>How might they guide communications on Trellis or otherwise?</em>
               </p>
@@ -181,10 +181,10 @@
       <h2 id="resources">Follow-up Resources &amp; Materials</h2>
       <ul>
         <li>
-          <a href="http://incisive.nu/2014/codes-of-conduct/">Example Norms document from 2016 Mozilla Fellows</a>
+          <a href="https://public.etherpad-mozilla.org/p/safety">Example Norms document from 2016 Mozilla Fellows</a>
         </li>
         <li>
-          <a href="http://www.ashedryden.com/blog/codes-of-conduct-101-faq">Goals exercise from 2016 Mozilla Fellows</a> 
+          <a href="https://gist.github.com/auremoser/9461e9ea62c5b3d7b87794158db4342c">Goals exercise from 2016 Mozilla Fellows</a> 
         </li>
       </ul>
 
