--- a/goals/index.html
+++ b/goals/index.html
@@ -42,7 +42,7 @@
           This exercise will walk you through some of the steps for setting goals for your organization and aligning them with community guidelines. 
         </p>
         <div class="details">
-          <time>30 minutes</time>
+          <time>15 minutes</time>
           <p class="difficulty">For beginners</p>
         </div>
       </div>
@@ -73,7 +73,7 @@
       </p>
 
 
-      <p>Right now, we'll prototype guidelines for your current cohort community of fellows, and you can re-use them or do the same exercise for your own communities</p>
+      <p>Right now, we'll prototype guidelines for your current cohort community of fellows, and you can re-use them or do the same exercise for your own communities.</p>
 
       <h2 id="steps-to-complete">Steps to Complete</h2>
 
@@ -88,15 +88,15 @@
           <h1>Brainstorm</h1>
           <p>
             Start by reflecting on the
-            following questions as a small group. Transfer suggestions to post-its. Try to give yourselves 2-3 minutes per section.
+            following questions as a small group. Transfer responses to post-its. Try to give yourselves 2-3 minutes per section.
           </p>
 
           <ul>
             <li>
               <h3>What collaborative and community goals would you set?</h3>
-              <time>2 minutes each</time>
+              <time>2 minutes</time>
               <p>
-                Think about the words and values you developed in the code of conduct exercise. Which of these informs some community goals for your cohort that you might articulate here? Short phrases will suffice. 
+                Think about the words and values you developed in the code of conduct exercise. Which of these informs some community goals for your cohort that you might articulate here? Short phrases will suffice. Document one or two main ones on post-its.
               </p>
               <p>
                 <em>Examples: How do you see your cohort relationship growing?</em>
@@ -108,7 +108,7 @@
             </li>
             <li>
               <h3>What norms will you set?</h3>
-              <time>2 minutes each</time>
+              <time>2 minutes</time>
               <p>
                 Adapt the desirable and undesirable behaviors from the previous exercise to list some norms you'd like to enforce. Document one or two main ones on post-its. 
               </p>
@@ -120,7 +120,7 @@
             </li>
             <li>
               <h3>What are the educational or academic goals that might foster community growth?</h3>
-              <time>2 minutes each</time>
+              <time>2 minutes</time>
               <p>
                 What skills will you develop throughout your fellowship and in your role, and how can you transfer or build skills in your community. Document one or two main ones on post-its. 
               </p>
@@ -137,7 +137,7 @@
         <!-- Step 2 -->
         <li>
           <h1>Collect + Consider</h1>
-          <time>10 minutes</time>
+          <time>5 minutes</time>
           <p>
             Group the post-its into piles based on the three question buckets above. Try to assemble them in a meaningful order, and think about how you might sync them with your codes of conduct, or possibly merge the two. Discuss with your group.
           </p>
