--- a/goals/index.html
+++ b/goals/index.html
@@ -149,7 +149,7 @@
           <time>5 minutes</time>
           <p>
             Bring the conversation to the larger group, highlighting one or two salient guidelines from your group discussion. 
-            From this we'll choose your favorite collaborative editing tool (etherpad,Google Docs...), and draft a set of community guidelines from your post-its, for this week. Once recorded (possibly after the session), you'll be invited to sign the document. We'll revisit at the end of the week.
+            From this we'll choose your favorite collaborative editing tool (etherpad, Google Docs...), and draft a set of community guidelines from your post-its, for this week. Once recorded (possibly after the session), you'll be invited to sign the document. We'll revisit at the end of the week.
           </p>
         </li>
       </ol>
@@ -174,10 +174,13 @@
       <h2 id="resources">Follow-up Resources &amp; Materials</h2>
       <ul>
         <li>
-          <a href="https://public.etherpad-mozilla.org/p/safety">Example Norms document from 2016 Mozilla Fellows</a>
+          <a href="https://public.etherpad-mozilla.org/p/safety">Example Norms document</a> (2016 Mozilla Fellows)
         </li>
         <li>
-          <a href="https://gist.github.com/auremoser/9461e9ea62c5b3d7b87794158db4342c">Goals exercise from 2016 Mozilla Fellows</a> 
+          <a href="https://gist.github.com/auremoser/9461e9ea62c5b3d7b87794158db4342c">Goals exercise</a> (2016 Mozilla Fellows)
+        </li>
+        <li>
+          <a href="https://gist.github.com/auremoser/9461e9ea62c5b3d7b87794158db4342c">Open Canvas</a> - for further breaking down goals
         </li>
       </ul>
 
