--- a/goals/index.html
+++ b/goals/index.html
@@ -88,12 +88,12 @@
           <h1>Brainstorm</h1>
           <p>
             Start by reflecting on the
-            following questions as a small group. Transfer responses to post-its. Try to give yourselves 2-3 minutes per section.
+            following sections as a small group. Transfer responses to post-its. Try to give yourselves 2-3 minutes per section.
           </p>
 
           <ul>
             <li>
-              <h3>What collaborative and community goals would you set?</h3>
+              <h3>Collaborative + Community Goals</h3>
               <time>2 minutes</time>
               <p>
                 Think about the words and values you developed in the code of conduct exercise. Which of these informs some community goals for your cohort that you might articulate here? Short phrases will suffice. Document one or two main ones on post-its.
@@ -107,7 +107,7 @@
               </p>
             </li>
             <li>
-              <h3>What norms will you set?</h3>
+              <h3>Norms</h3>
               <time>2 minutes</time>
               <p>
                 Adapt the desirable and undesirable behaviors from the previous exercise to list some norms you'd like to enforce. Document one or two main ones on post-its. 
@@ -119,7 +119,7 @@
               </p>
             </li>
             <li>
-              <h3>What are the educational or academic goals that might foster community growth?</h3>
+              <h3>Educational + Growth Goals</h3>
               <time>2 minutes</time>
               <p>
                 What skills will you develop throughout your fellowship and in your role, and how can you transfer or build skills in your community. Document one or two main ones on post-its. 
@@ -180,7 +180,7 @@
           <a href="https://gist.github.com/auremoser/9461e9ea62c5b3d7b87794158db4342c">Goals exercise</a> (2016 Mozilla Fellows)
         </li>
         <li>
-          <a href="https://gist.github.com/auremoser/9461e9ea62c5b3d7b87794158db4342c">Open Canvas</a> - for further breaking down goals
+          <a href="https://mozillascience.github.io/working-open-workshop/open_canvas/">Open Canvas</a> - for further breaking down goals
         </li>
       </ul>
 
