--- a/goals/index.html
+++ b/goals/index.html
@@ -100,10 +100,8 @@
               </p>
               <p>
                 <em>Examples: How do you see your cohort relationship growing?</em>
-                <em>What contacts would you like to build or maintain?</em>
                 <em>What assets would you like to be able to share with your (new or current) community from your cohort?</em>
                 <em>What domains, industries, or disciplines would you like to collaborate with through your future work?</em>
-                <em>How might you like to grow the scope of your community and to what capacity?</em>
               </p>
             </li>
             <li>
@@ -115,7 +113,7 @@
               <p>
                 <em>Examples: Think about how you might enforce these behaviors.</em>
                 <em>How can you communicate them simply, and revisit them often?</em>
-                <em>How might they guide communications on Trellis or otherwise?</em>
+                <em>How might they guide communications on Trellis?</em>
               </p>
             </li>
             <li>
