--- a/index.html
+++ b/index.html
@@ -80,10 +80,9 @@
       Guides for each exercise of this handbook according to the above outline.
     </p>
       <ol>
-        <li><strong><a href="dynamics/" target="_blank">Team Dynamics Exercise</a></strong></li>
+        <li><strong><a href="https://github.com/auremoser/aaas-guides/tree/master/dynamics" target="_blank">Team Dynamics Exercise</a></strong></li>
         <li><strong><a href="conduct/index.html" target="_blank">Conduct Codes + Norms</a></strong></li>
         <li><strong><a href="goals/index.html" target="_blank">Guidelines + Goal-Setting</a></strong></li>
-        <li><strong><a href="week3/" target="_blank">Discussion + Share-out</a></strong></li>
       </ol>
 
   <!-- HELP -->
