--- a/goals/index.html
+++ b/goals/index.html
@@ -180,6 +180,9 @@
         <li>
           <a href="https://mozillascience.github.io/working-open-workshop/open_canvas/">Open Canvas</a> - for further breaking down goals
         </li>
+        <li>
+          <a href="https://science.mozilla.org/blog/2016-fellows-onboarding-recap">Onboarding overview</a> - how the Mozilla Science Lab onboards new fellows
+        </li>
       </ul>
 
     </article>
