--- a/index.html
+++ b/index.html
@@ -123,6 +123,10 @@
               <h2>Workshop website</h2>
               <p><a href="https://auremoser.github.io/aaas-guides">https://auremoser.github.io/aaas-guides</a></p>
             </li>
+            <li>
+              <h2>Participation survey</h2>
+              <p><a href="https://goo.gl/forms/5eWB33OJvMzQM6Pa2">https://goo.gl/forms/5eWB33OJvMzQM6Pa2</a></p>
+            </li>
           </ul>
       </ol>
   	</article>
