return to google doc

--- a/goals/index.html
+++ b/goals/index.html
@@ -147,7 +147,7 @@
           <time>5 minutes</time>
           <p>
             Bring the conversation to the larger group, highlighting one or two salient guidelines from your group discussion. 
-            From this we'll choose your favorite collaborative editing tool (etherpad, Google Docs...), and draft a set of community guidelines from your post-its, for this week. Once recorded (possibly after the session), you'll be invited to sign the document. We'll revisit at the end of the week.
+            From this we'll return to our <a href="https://docs.google.com/document/d/1O0Im0k-Ta8QUUw1v_HfmQTX1FAOa6uJeLWAcNC90BKQ/edit#">Google Doc</a>, and draft a set of community guidelines from your post-its, for this week. Once recorded, you'll be invited to "sign" the document. We'll revisit at the end of the week.
           </p>
         </li>
       </ol>
